Change: Hero message a to this

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -61,7 +61,7 @@ const sizes = "(min-width: 1024px) 33vw, (min-width: 768px) 50vw, 100vw";
             <p
               class="mt-6 max-w-xl mx-auto leading-7 text-gradient-hero font-Futurewave text-xs sm:text-base"
             >
-              Learn how to create a blog & portfolio and gain insights into the process of creating a website project from the ground up, all the way through deployment.
+              Learn how to create this blog & portfolio and gain insights into the process of creating a website project from the ground up, all the way through deployment.
             </p>
           </div>
         </div>
