LightHouse: Colour check and Styling

--- a/src/components/CTA.astro
+++ b/src/components/CTA.astro
@@ -42,7 +42,7 @@ import Skills from "../assets/img/mushroom.svg";
             class="mt-10 flex items-center justify-center gap-x-6 lg:justify-start"
           >
             <a
-              href="#notice"
+              href="#registration"
               class="inline-flex items-center justify-center px-6 py-2 text-sm text-white font-Futurewave duration-300 rounded-lg bg-gray-800 hover:bg-gray-700 dark:bg-sky-800 dark:hover:bg-sky-900"
             >
               Start Now
@@ -129,62 +129,6 @@ import Skills from "../assets/img/mushroom.svg";
               clip-rule="evenodd"></path>
           </svg>
           Fetch data from HyGraph
-        </li>
-        <li class="flex gap-x-3 line-through">
-          <svg
-            class="h-6 w-5 flex-none text-sky-500"
-            viewBox="0 0 20 20"
-            fill="currentColor"
-            aria-hidden="true"
-          >
-            <path
-              fill-rule="evenodd"
-              d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
-              clip-rule="evenodd"></path>
-          </svg>
-          Tailwind CSS basics
-        </li>
-        <li class="flex gap-x-3 line-through">
-          <svg
-            class="h-6 w-5 flex-none text-sky-500"
-            viewBox="0 0 20 20"
-            fill="currentColor"
-            aria-hidden="true"
-          >
-            <path
-              fill-rule="evenodd"
-              d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
-              clip-rule="evenodd"></path>
-          </svg>
-          VS Code basics
-        </li>
-        <li class="flex gap-x-3 line-through">
-          <svg
-            class="h-6 w-5 flex-none text-sky-500"
-            viewBox="0 0 20 20"
-            fill="currentColor"
-            aria-hidden="true"
-          >
-            <path
-              fill-rule="evenodd"
-              d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
-              clip-rule="evenodd"></path>
-          </svg>
-          SEO basics
-        </li>
-        <li class="flex gap-x-3 line-through">
-          <svg
-            class="h-6 w-5 flex-none text-sky-500"
-            viewBox="0 0 20 20"
-            fill="currentColor"
-            aria-hidden="true"
-          >
-            <path
-              fill-rule="evenodd"
-              d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
-              clip-rule="evenodd"></path>
-          </svg>
-          Fetch a public API using VUE
         </li>
         <li class="flex gap-x-3 line-through">
           <svg
