--- a/src/components/Notice.astro
+++ b/src/components/Notice.astro
@@ -2,7 +2,7 @@
 const props = Astro.props;
 ---
 
-<section id="notice">
+<section id="registration">
   <div class="mx-auto max-w-7xl px-6 lg:px-8 py-24 sm:py-32">
     <div
       class="mx-auto max-w-5xl lg:text-center px-2 sm:px-6 lg:px-0 m-3 pb-12 pt-3 nm-flat-white-lg dark:nm-flat-gray-700-lg rounded-lg p-8 text-left sm:text-center w-full"
@@ -132,7 +132,7 @@ const props = Astro.props;
         <a
           href="https://www.meetup.com/ja-JP/osaka-web-designers-and-developers-meetup/"
           target="_blank"
-          class="flex items-center justify-center gap-3 border-2 border-current px-2 py-1 sm:px-6 sm:py-4 bg-green-500 text-white"
+          class="flex items-center justify-center gap-3 border-2 border-current px-2 py-1 sm:px-6 sm:py-4 bg-green-500 text-black"
         >
           <svg
             xmlns="http://www.w3.org/2000/svg"
