Created: 404 | UX for slugs

--- a/src/components/BlogIndex.astro
+++ b/src/components/BlogIndex.astro
@@ -96,7 +96,7 @@ const sizes = "(min-width: 1024px) 33vw, (min-width: 768px) 50vw, 100vw";
                   </div>
                   <span class="self-center font-Futurewave text-xs">
                     <>
-                      <a href="#">{post.authors[0].name}</a>
+                      <a href="/me-myself-and-i">{post.authors[0].name}</a>
                       <br />
                       <span class="text-gradient-brand font-extrabold uppercase tracking-[0.6em]">
                         owddm
