--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -12,11 +12,17 @@ body {
   font-family: 'Inter Variable', sans-serif;
   font-weight: 400;
 }
-a,
-.btn {
+a {
   @apply rounded-lg p-3;
   @apply transition-colors duration-200;
   @apply text-amber-600 hover:text-gray-300;
+}
+
+.btn {
+  @apply rounded-lg p-3 mx-4;
+  @apply transition-colors duration-200;
+  @apply text-gray-800 hover:text-gray-50;
+  @apply border-2 border-current px-2 py-1 sm:px-6 sm:py-4;
 }
 
 .text-gradient-brand {
