Styling: Btn & Font

--- a/src/pages/portfolio/[...slug].astro
+++ b/src/pages/portfolio/[...slug].astro
@@ -74,7 +74,7 @@ const project = Astro.props.project;
 
 <ProjectLayout title={project.name}>
   <TextArticle />
-  <section class="my-24">
+  <section class="my-24 max-w-7xl mx-auto">
     <div class="flex text-xs md:text-xl font-Futurewave">
       <a href="/">home</a>
       <a href="/portfolio">/portfolio</a>
