Design: bootifying - landingpage

--- a/src/components/LandingPageBlog.astro
+++ b/src/components/LandingPageBlog.astro
@@ -68,7 +68,7 @@ const sizes = "(min-width: 1024px) 33vw, (min-width: 768px) 50vw, 100vw";
               <div class="relative mt-8 flex items-center gap-x-4">
                 <hr class="py-6 border border-orange-600" />
                 <div class="flex justify-center space-x-3 md:justify-start">
-                  <h2 class="sr-only">OWDDM</h2>
+                  <h2 class="sr-only">Osaka/Kyoto Web Designers and Developers Meetup</h2>
                   <div class="flex items-center justify-center">
                     <Icon
                       name="masscomMediaLogo"
@@ -80,8 +80,8 @@ const sizes = "(min-width: 1024px) 33vw, (min-width: 768px) 50vw, 100vw";
                     <>
                       <a href="/me-myself-and-i" class="text-sky-600 tracking-widest">{post.authors[0].name}</a>
                       <br />
-                      <span class="text-gradient-brand font-extrabold uppercase tracking-[0.6em]">
-                        owddm
+                      <span class="text-gradient-brand font-extrabold uppercase tracking-[0.6em] border-t border-sky-500">
+                        . . . . . .
                       </span>
                     </>
                   </span>
