--- a/src/components/LandingPagePortfolio.astro
+++ b/src/components/LandingPagePortfolio.astro
@@ -84,7 +84,7 @@ const sizes = "(min-width: 1024px) 33vw, (min-width: 768px) 50vw, 100vw";
                     </a>
                     <br />
                     <span class="text-gradient-brand font-extrabold uppercase tracking-[0.6em]">
-                      owddm
+                      media
                     </span>
                   </>
                 </span>
