--- a/src/components/BlogIndex.astro
+++ b/src/components/BlogIndex.astro
@@ -56,6 +56,14 @@ const sizes = "(min-width: 1024px) 33vw, (min-width: 768px) 50vw, 100vw";
                   {post.tags[0]}
                 </a>
               </div>
+              <div class="group relative">
+                <h3 class="mt-10 text-lg line-clamp-1 font-semibold leading-6 font-Futurewave group-hover:text-gray-600">
+                  <a href={`/blog/${post.slug}`}>
+                    <span class="absolute inset-0" />
+                    {post.slug}
+                  </a>
+                </h3>
+              </div>
               <div class="relative m-4">
                 <a
                   class="hover:!text-default group aspect-ratio"
@@ -74,19 +82,10 @@ const sizes = "(min-width: 1024px) 33vw, (min-width: 768px) 50vw, 100vw";
                 </a>
               </div>
 
-              <div class="group relative">
-                <h3 class="mt-3 text-lg line-clamp-2 font-semibold leading-6 font-Futurewave group-hover:text-gray-600">
-                  <a href={`/blog/${post.slug}`}>
-                    <span class="absolute inset-0" />
-                    {post.slug}
-                  </a>
-                </h3>
-              </div>
-
               <div class="relative mt-8 flex items-center gap-x-4">
                 <hr class="py-6 border border-orange-600" />
                 <div class="flex justify-center space-x-3 md:justify-start">
-                  <h2 class="sr-only">OWDDM</h2>
+                  <h2 class="sr-only">Osaka/Kyoto Web Designers and Developers Meetup</h2>
                   <div class="flex items-center justify-center">
                     <Icon
                       name="masscomMediaLogo"
@@ -96,10 +95,10 @@ const sizes = "(min-width: 1024px) 33vw, (min-width: 768px) 50vw, 100vw";
                   </div>
                   <span class="self-center font-Futurewave text-xs">
                     <>
-                      <a href="/me-myself-and-i">{post.authors[0].name}</a>
+                      <a href="/me-myself-and-i" class="tracking-widest">{post.authors[0].name}</a>
                       <br />
-                      <span class="text-gradient-brand font-extrabold uppercase tracking-[0.6em]">
-                        owddm
+                      <span class="text-gradient-brand font-extrabold uppercase tracking-[0.6em] border-t border-amber-600">
+                        . . . . . .
                       </span>
                     </>
                   </span>
