--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -16,46 +16,57 @@ const props = Astro.props;
           <Icon
             name="logomark"
             class="h-12 w-auto rounded sm:h-16 text-red-800 hover:text-blue-950"
-            aria-label="OWDDM Study logo"
+            aria-label="OWDDM logo"
           />
         </div>
         <span
           class="self-center text-xs sm:text-2xl text-gradient-brand font-extrabold uppercase tracking-[0.6em]"
-          >owddm | kwddm</span
+          >owddm</span
         >
       </a>
+      <div class="justify-center max-w-4xl">
+        <div
+          class="flex items-center justify-center text-xs sm:text-2xl text-gradient-brand font-extrabold uppercase tracking-[0.6em]"
+        >
+          create a blog/portfolio in Astro & HyGraph
+        </div>
+      </div>
     </div>
 
     <hr class="my-10 border-gray-200 dark:border-gray-700" />
 
     <div class="flex flex-col items-center sm:flex-row sm:justify-between">
-      <p class="text-sm">
-        © Copyright {today.getFullYear()}<br /><a
+      <p class="text-xs sm:text-sm text-center justify-center">
+        © Copyright <span class="font-Inter tracking-widest text-xl"
+          >{today.getFullYear()}</span
+        ><br /><a
           href="/credits"
           class="text-gray-800"
           title="All Rights Reserved in creating this workshop project."
           aria-label="Credit attribution page to make this project"
           >All Rights Reserved.
         </a>
-        <a
-          href="https://masscom.media"
-          class="flex justify-center space-x-3 md:justify-start text-gray-800"
-          target="_blank"
-          aria-label="A Masscom Media Project"
-        >
-          <div class="flex items-center justify-center">
-            <Icon
-              name="masscomMediaLogo"
-              class="h-8 w-auto rounded border-2 border-white/50 hover:bg-sky-500 sm:h-10 lg:h-12"
-              aria-label="MassCom Media logo"
-            />
-          </div>
-          <span
-            class="self-center hidden sm:block text-xs font-extrabold tracking-[0.6em]"
+        <div class="mt-3 sm:mt-0">
+          <a
+            href="https://masscom.media"
+            class="flex justify-center space-x-3 md:justify-start text-gray-800"
+            target="_blank"
+            aria-label="A Masscom Media Project"
           >
-            a MassCom Media project</span
-          >
-        </a>
+            <div class="flex items-center justify-center">
+              <Icon
+                name="masscomMediaLogo"
+                class="h-8 w-auto rounded border-2 border-white/50 hover:bg-sky-500 sm:h-10 lg:h-12"
+                aria-label="MassCom Media logo"
+              />
+            </div>
+            <span
+              class="self-center hidden sm:block text-xs font-extrabold tracking-[0.6em]"
+            >
+              a MassCom Media project</span
+            >
+          </a>
+        </div>
 
         <div class="flex mt-3 -mx-2 sm:mt-0">
           <a
