--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -9,7 +9,7 @@ const props = Astro.props;
   class="sticky top-0 z-50 flex justify-between mx-auto font-Futurewave bg-gradient-nav px-1 pr-4 sm:pr-0 sm:px-8"
 >
   <a href="/" class="flex justify-center space-x-3 md:justify-start">
-    <h2 class="sr-only">OWDDM</h2>
+    <h2 class="sr-only">Osaka/Kyoto Web Designers and Developers Meetup</h2>
     <div class="flex items-center">
       <Icon
         name="logomark"
@@ -19,7 +19,7 @@ const props = Astro.props;
     </div>
     <span
       class="hidden self-center text-sm md:text-xl text-gradient-brand font-extrabold uppercase tracking-[0.6em] lg:block"
-      >owddm</span
+      >wrkshp</span
     >
   </a>
   <div class="flex items-center justify-center">
@@ -47,7 +47,7 @@ const props = Astro.props;
           </div>
           <span
             class="hidden text-sm font-semibold uppercase tracking-[0.6em] sm:block"
-            >Blog</span
+            >Blg</span
           >
         </a>
       </li>
@@ -73,7 +73,7 @@ const props = Astro.props;
           </div>
           <span
             class="hidden text-sm font-semibold uppercase tracking-[0.6em] sm:block"
-            >Portfolio</span
+            >Prtfl</span
           >
         </a>
       </li>
