--- a/src/components/PortfolioIndex.astro
+++ b/src/components/PortfolioIndex.astro
@@ -89,7 +89,7 @@ const sizes = "(min-width: 1024px) 33vw, (min-width: 768px) 50vw, 100vw";
               <div class="relative mt-8 flex items-center gap-x-4">
                 <hr class="py-6 border border-orange-600" />
                 <div class="flex justify-center space-x-3 md:justify-start">
-                  <h2 class="sr-only">OWDDM</h2>
+                  <h2 class="sr-only">Osaka/Kyoto Web Designers and Developers Meetup</h2>
                   <div class="flex items-center justify-center">
                     <Icon
                       name="logomark"
