--- a/src/components/IntroSection.astro
+++ b/src/components/IntroSection.astro
@@ -10,7 +10,7 @@ const { title, id } = Astro.props;
 <section id={id} class="bg-sky-200 dark:bg-sky-950">
   <div class="mx-auto max-w-7xl px-6 lg:px-8 py-24 sm:py-32">
     <div
-      class="mx-auto max-w-5xl lg:text-center px-2 sm:px-6 lg:px-0 m-3 pb-12 pt-3 rounded-lg p-8 text-left sm:text-center w-full"
+      class="mx-auto max-w-5xl xl:max-w-7xl lg:text-center px-2 sm:px-6 lg:px-0 m-3 pb-12 pt-3 rounded-lg p-8 text-left sm:text-center w-full"
     >
       <h2
         class="mt-2 text-3xl font-bold tracking-tight font-Futurewave sm:text-4xl text-center"
