--- a/src/components/text404.astro
+++ b/src/components/text404.astro
@@ -2,13 +2,15 @@
 import IntroSection from "./IntroSection.astro";
 import { Icon } from "astro-icon/components";
 
-const props = Astro.props;
+const { title = "Error Page" } = Astro.props;
 ---
 
-<IntroSection title="You just hit a 404, yeah baby" id="404">
+<IntroSection title={title} id="404">
   <Fragment slot="lead">
+    <div class="font-Futurewave">yeah baby <span class="text-3xl tracking-widest font-Inter text-amber-600">|</span> You just hit an {title}:<br />known as:<br /></div>
+    <div class="text-7xl sm:text-9xl tracking-widest font-Inter border-4 border-red-800 my-12 p-10 text-center">404</div>
     <div
-      class="flex justify-center space-x-1 sm:space-x-5 my-4 lg:my-10 font-Futurewave"
+      class="flex justify-center space-x-1 sm:space-x-5 my-8 lg:my-16 font-Futurewave"
     >
       <a
         href="/"
@@ -34,15 +36,15 @@ const props = Astro.props;
         <span class="text-xs sm:text-base">Blue</span>
       </a>
     </div>
-    <p class="text-center text-xl sm:text-9xl font-Futurewave">
-      Red Pill, Blue Pill, does it matter? They both go to the HomePage!
-      <span class="leading-9 text-xl"
-        >Yeah, I guest you are just as lost as me!</span
+    <p class="text-center text-xl md:text-7xl lg:text-8xl xl:text-9xl font-Futurewave">
+      Red Pill, Blue Pill, does it matter? They both go to the HomePage!<br />
+      <span class="leading-9 text-xl tracking-widest"
+        >いらっしゃいませ,<span class="text-3xl"> guest </span>you are just as lost as me!</span
       >
     </p>
     <p class="text-center text-xs font-Futurewave">
       <br />
-      Either delete this component and make your own 404 page!
+      Either delete this component and make your own <span class="font-Inter text-xl tracking-widest"> 404 </span>page!
       <br />
       <span class="leading-9 text-xs"
         >or keep it and try to make something of your own!</span
