--- a/src/components/TextIntro.astro
+++ b/src/components/TextIntro.astro
@@ -1,5 +1,6 @@
 ---
 import IntroSection from "./IntroSection.astro";
+const props = Astro.props;
 ---
 
 <IntroSection title="About Me" id="about">
@@ -10,5 +11,30 @@ import IntroSection from "./IntroSection.astro";
       Well, that’s a secret whispered only to the moon and the rustling pages of
       forgotten manuscripts. To the world, I am simply “The Keeper.”
     </p>
+    <div class="max-w-md mx-auto justify-center mt-16 font-Futurewave">
+      <a
+        href="/me-myself-and-i"
+        class="flex items-center justify-center gap-3 border-2 border-current px-2 py-1 sm:px-6 sm:py-4"
+      >
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="48"
+          height="48"
+          viewBox="0 0 24 24"
+          {...props}
+        >
+          <g fill="none" stroke="currentColor" stroke-width="1.5">
+            <path
+              d="M11.607 2.342a.6.6 0 0 1 .787 0l1.948 1.692a.6.6 0 0 0 .445.145l2.572-.224a.6.6 0 0 1 .636.463l.582 2.514a.6.6 0 0 0 .275.38l2.212 1.33a.6.6 0 0 1 .243.748l-1.008 2.376a.6.6 0 0 0 0 .468l1.008 2.376a.6.6 0 0 1-.243.749l-2.212 1.33a.6.6 0 0 0-.275.379l-.582 2.514a.6.6 0 0 1-.636.463l-2.572-.224a.6.6 0 0 0-.445.144l-1.949 1.693a.6.6 0 0 1-.787 0l-1.948-1.693a.6.6 0 0 0-.445-.144l-2.572.224a.6.6 0 0 1-.636-.463l-.582-2.514a.6.6 0 0 0-.275-.38l-2.212-1.33a.6.6 0 0 1-.243-.748l1.008-2.376a.6.6 0 0 0 0-.468L2.693 9.39a.6.6 0 0 1 .243-.749l2.212-1.33a.6.6 0 0 0 .275-.379l.582-2.514a.6.6 0 0 1 .636-.463l2.572.224a.6.6 0 0 0 .445-.145z"
+            ></path>
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="m9 13l2 2l5-5"></path>
+          </g>
+        </svg>
+        <span class="text-xs sm:text-base font-Futurewave">Want to know more ?</span></a
+      >
+    </div>
   </Fragment>
 </IntroSection>
