--- a/src/components/Notice.astro
+++ b/src/components/Notice.astro
@@ -132,7 +132,7 @@ const props = Astro.props;
         <a
           href="https://www.meetup.com/ja-JP/osaka-web-designers-and-developers-meetup/"
           target="_blank"
-          class="flex items-center justify-center gap-3 border-2 border-current px-2 py-1 sm:px-6 sm:py-4 bg-green-500 text-black"
+          class="flex items-center justify-center gap-3 nm-inset-sky-200-sm dark:nm-inset-gray-700-lg px-2 py-1 sm:px-6 sm:py-4"
         >
           <svg
             xmlns="http://www.w3.org/2000/svg"
