--- a/src/components/Portfolio.astro
+++ b/src/components/Portfolio.astro
@@ -38,7 +38,7 @@ import LandingPagePortfolio from "../components/LandingPagePortfolio.astro";
         <h2
           class="text-xl font-bold sm:text-4xl nm-convex-sky-200-sm dark:nm-flat-gray-700-lg p-6"
         >
-          Portfolio
+        <a href="/portfolio" class="nm-inset-sky-100-sm dark:nm-inset-gray-700-lg">Portfolio</a>
         </h2>
         <p class="mt-2 text-sm leading-8">
           Let's have a look at my awesome projects, let's go!
