--- a/src/components/TextIntro.astro
+++ b/src/components/TextIntro.astro
@@ -14,7 +14,7 @@ const props = Astro.props;
     <div class="max-w-md mx-auto justify-center mt-16 font-Futurewave">
       <a
         href="/me-myself-and-i"
-        class="flex items-center justify-center gap-3 border-2 border-current px-2 py-1 sm:px-6 sm:py-4"
+        class="flex items-center justify-center gap-3 border-2 border-current px-2 py-1 sm:px-6 sm:py-4 text-gray-600"
       >
         <svg
           xmlns="http://www.w3.org/2000/svg"
