--- a/src/components/Blog.astro
+++ b/src/components/Blog.astro
@@ -51,7 +51,7 @@ import LandingPageBlog from "../components/LandingPageBlog.astro";
         <h2
           class="text-xl font-bold sm:text-4xl nm-flat-stone-100-sm dark:nm-flat-gray-800-lg p-6"
         >
-          <a href="/blog" class="nm-inset-stone-100-sm dark:nm-inset-gray-800-lg">From the Blog</a>
+          <a href="/blog" class="nm-inset-stone-100-sm dark:nm-inset-gray-800-lg text-gray-600 dark:text-gray-50">From the Blog</a>
         </h2>
         <p class="mt-2 text-sm leading-8">
           My adventurous life as a developer in Japan.
