--- a/src/components/MainHead.astro
+++ b/src/components/MainHead.astro
@@ -19,9 +19,10 @@ const { title, description } = Astro.props;
   <title>{title}</title>
   <meta name="description" content={description} />
   <!-- bfcache -->
+  <!-- Pages that use WebAuthetication API are not eligible for back/forward cache 
   <meta http-equiv="Pragma" content="no-cache" />
   <meta http-equiv="Cache-Control" content="no-cache" />
-  <meta http-equiv="Expires" content="0" />
+  <meta http-equiv="Expires" content="0" /> -->
   <!-- open graph -->
   <meta property="og:title" content={title} />
   <meta property="og:locale" content="en_US" />
