--- a/src/pages/me-myself-and-i.astro
+++ b/src/pages/me-myself-and-i.astro
@@ -1,10 +1,7 @@
 ---
 import MainLayout from "../layouts/MainLayout.astro";
 import IntroSection from "../components/IntroSection.astro";
-import { Image } from "astro:assets";
-import Avatar from "../assets/img/sunset.webp";
-//import { slide } from "astro:transitions";
-import { Icon } from "astro-icon/components";
+import { slide } from "astro:transitions";
 
 const response = await fetch(
   "https://api-ap-northeast-1.hygraph.com/v2/clt4ffy57008c08jpaguxht8t/master",
@@ -45,28 +42,49 @@ const sizes = "(min-width: 1024px) 33vw, (min-width: 768px) 50vw, 100vw";
   title="OWDDM | Workshop | Osaka"
   description="Build a blog and portfolio in a Astro.build framework, along with Tailwind CSS and HyGraph as a headless CMS!"
 >
-  {
-    authors.data.authors.map((author) => (
-      <>
-        <div class="relative grid h-screen place-items-center bg-stone-800/80 dark:bg-gray-800/90 p-6">
-          <div class="items-center px-0 sm:px-6 flex flex-col-reverse md:flex-row gap-12 md:max-w-7xl xl:max-w-max">
-            <div class="sm:text-base lg:text-lg xl:max-w-5xl xl:text-4xl font-Futurewave">
-              <div class="flex-none text-center">
-                <h1 class="mb-10 text-3xl xl:text-7xl font-bold text-green-500 ">
-                  Tenshin
-                  <span class="text-base xl:text-5xl text-gradient-brand">
-                    {author.name}
-                  </span>
-                </h1>
-                <p class="mb-6 text-white text-base">{author.intro}</p>
-              </div>
-              <div class="flex justify-center space-x-1 sm:space-x-5 my-8 lg:my-10">
-                <a
-                  href="/"
-                  target="_blank"
-                  class="flex items-center justify-center gap-3 border-2 border-current px-2 py-1 sm:px-6 sm:py-4 text-white/20"
-                >
-                  <>
+  <section transition:animate={slide({ duration: "0.5s" })}>
+    {
+      authors.data.authors.map((author) => (
+        <>
+          <div class="relative grid h-screen place-items-center bg-stone-800/50 dark:bg-gray-800/90 p-6">
+            <div class="items-center px-0 sm:px-6 flex flex-col-reverse md:flex-row gap-12 md:max-w-7xl xl:max-w-max">
+              <div class="sm:text-base lg:text-lg xl:max-w-5xl xl:text-4xl font-Futurewave">
+                <div class="flex-none text-center">
+                  <h1 class="mb-10 text-3xl xl:text-7xl font-bold text-green-500 ">
+                    Tenshin
+                    <span class="text-base xl:text-5xl text-gradient-brand">
+                      {author.name}
+                    </span>
+                  </h1>
+                  <p class="mb-6 text-white text-base">{author.intro}</p>
+                </div>
+                <div class="flex justify-center space-x-1 sm:space-x-5 my-8 lg:my-10">
+                  <a
+                    href="/"
+                    target="_blank"
+                    class="flex items-center justify-center gap-3 border-2 border-current px-2 py-1 sm:px-6 sm:py-4 text-white/20"
+                  >
+                    <>
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="24"
+                        height="24"
+                        viewBox="0 0 24 24"
+                        {...props}
+                      >
+                        <path
+                          fill="currentColor"
+                          d="M7.8 2h8.4C19.4 2 22 4.6 22 7.8v8.4a5.8 5.8 0 0 1-5.8 5.8H7.8C4.6 22 2 19.4 2 16.2V7.8A5.8 5.8 0 0 1 7.8 2m-.2 2A3.6 3.6 0 0 0 4 7.6v8.8C4 18.39 5.61 20 7.6 20h8.8a3.6 3.6 0 0 0 3.6-3.6V7.6C20 5.61 18.39 4 16.4 4zm9.65 1.5a1.25 1.25 0 0 1 1.25 1.25A1.25 1.25 0 0 1 17.25 8A1.25 1.25 0 0 1 16 6.75a1.25 1.25 0 0 1 1.25-1.25M12 7a5 5 0 0 1 5 5a5 5 0 0 1-5 5a5 5 0 0 1-5-5a5 5 0 0 1 5-5m0 2a3 3 0 0 0-3 3a3 3 0 0 0 3 3a3 3 0 0 0 3-3a3 3 0 0 0-3-3"
+                        />
+                      </svg>
+                      <span class="text-xs sm:text-base">Instagram</span>
+                    </>
+                  </a>
+                  <a
+                    href="/"
+                    class="flex items-center justify-center gap-3 border-2 border-current px-2 py-1 sm:px-6 sm:py-4 text-white/20"
+                    target="_blank"
+                  >
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
                       width="24"
@@ -76,67 +94,51 @@ const sizes = "(min-width: 1024px) 33vw, (min-width: 768px) 50vw, 100vw";
                     >
                       <path
                         fill="currentColor"
-                        d="M7.8 2h8.4C19.4 2 22 4.6 22 7.8v8.4a5.8 5.8 0 0 1-5.8 5.8H7.8C4.6 22 2 19.4 2 16.2V7.8A5.8 5.8 0 0 1 7.8 2m-.2 2A3.6 3.6 0 0 0 4 7.6v8.8C4 18.39 5.61 20 7.6 20h8.8a3.6 3.6 0 0 0 3.6-3.6V7.6C20 5.61 18.39 4 16.4 4zm9.65 1.5a1.25 1.25 0 0 1 1.25 1.25A1.25 1.25 0 0 1 17.25 8A1.25 1.25 0 0 1 16 6.75a1.25 1.25 0 0 1 1.25-1.25M12 7a5 5 0 0 1 5 5a5 5 0 0 1-5 5a5 5 0 0 1-5-5a5 5 0 0 1 5-5m0 2a3 3 0 0 0-3 3a3 3 0 0 0 3 3a3 3 0 0 0 3-3a3 3 0 0 0-3-3"
+                        d="M16.6 5.82s.51.5 0 0A4.278 4.278 0 0 1 15.54 3h-3.09v12.4a2.592 2.592 0 0 1-2.59 2.5c-1.42 0-2.6-1.16-2.6-2.6c0-1.72 1.66-3.01 3.37-2.48V9.66c-3.45-.46-6.47 2.22-6.47 5.64c0 3.33 2.76 5.7 5.69 5.7c3.14 0 5.69-2.55 5.69-5.7V9.01a7.35 7.35 0 0 0 4.3 1.38V7.3s-1.88.09-3.24-1.48"
                       />
                     </svg>
-                    <span class="text-xs sm:text-base">Instagram</span>
-                  </>
-                </a>
-                <a
-                  href="/"
-                  class="flex items-center justify-center gap-3 border-2 border-current px-2 py-1 sm:px-6 sm:py-4 text-white/20"
-                  target="_blank"
-                >
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="24"
-                    height="24"
-                    viewBox="0 0 24 24"
-                    {...props}
-                  >
-                    <path
-                      fill="currentColor"
-                      d="M16.6 5.82s.51.5 0 0A4.278 4.278 0 0 1 15.54 3h-3.09v12.4a2.592 2.592 0 0 1-2.59 2.5c-1.42 0-2.6-1.16-2.6-2.6c0-1.72 1.66-3.01 3.37-2.48V9.66c-3.45-.46-6.47 2.22-6.47 5.64c0 3.33 2.76 5.7 5.69 5.7c3.14 0 5.69-2.55 5.69-5.7V9.01a7.35 7.35 0 0 0 4.3 1.38V7.3s-1.88.09-3.24-1.48"
-                    />
-                  </svg>
-                  <span class="text-xs sm:text-base">TikTok</span>
-                </a>
+                    <span class="text-xs sm:text-base">TikTok</span>
+                  </a>
+                </div>
               </div>
-            </div>
-            <div id="selfie">
-              <div class="overflow-hidden aspect-auto flex-none">
-                <img
-                  src={author.picture.url}
-                  alt="Selfie"
-                  loading="eager"
-                  class="object-cover bg-cover h-full w-full rounded-3xl"
-                  sizes={sizes}
-                />
+              <div id="selfie">
+                <div class="overflow-hidden aspect-auto flex-none">
+                  <img
+                    src={author.picture.url}
+                    alt="Selfie"
+                    loading="eager"
+                    class="object-cover bg-cover h-full w-full rounded-3xl"
+                    sizes={sizes}
+                  />
+                </div>
               </div>
             </div>
           </div>
-        </div>
-        <IntroSection title="Who Am I" id="about">
-          <Fragment slot="lead">
-            <div class="inline-block mx-auto">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="128"
-                height="128"
-                viewBox="0 0 24 24"
-                {...props}
-              >
-                <path
-                  fill="currentColor"
-                  d="M5.615 20q-.69 0-1.152-.462Q4 19.075 4 18.385V5.615q0-.69.463-1.152Q4.925 4 5.615 4H11.5v16zm6.885 0v-8H20v6.385q0 .69-.462 1.152q-.463.463-1.153.463zm0-9V4h5.885q.69 0 1.152.463q.463.462.463 1.152V11z"
-                />
-              </svg>
-            </div>
-            <div class="max-w-7xl prose prose-headings:text-sky-500 prose-headings:underline prose-headings:font-Futurewave" set:html={author.bio.html} />
-            {author.post.slug}
-          </Fragment>
-        </IntroSection>
-      </>
-    ))
-  }
+          <IntroSection title="Who Am I" id="about">
+            <Fragment slot="lead">
+              <div class="inline-block mx-auto">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="128"
+                  height="128"
+                  viewBox="0 0 24 24"
+                  {...props}
+                >
+                  <path
+                    fill="currentColor"
+                    d="M5.615 20q-.69 0-1.152-.462Q4 19.075 4 18.385V5.615q0-.69.463-1.152Q4.925 4 5.615 4H11.5v16zm6.885 0v-8H20v6.385q0 .69-.462 1.152q-.463.463-1.153.463zm0-9V4h5.885q.69 0 1.152.463q.463.462.463 1.152V11z"
+                  />
+                </svg>
+              </div>
+              <div
+                class="max-w-7xl prose prose-headings:text-sky-500 prose-headings:underline prose-headings:font-Futurewave"
+                set:html={author.bio.html}
+              />
+              {author.post.slug}
+            </Fragment>
+          </IntroSection>
+        </>
+      ))
+    }
+  </section>
 </MainLayout>
