--- a/src/components/Notice.astro
+++ b/src/components/Notice.astro
@@ -18,7 +18,7 @@ const props = Astro.props;
         </p>
       </div>
       <p
-        class="mt-6 text-sm sm:text-lg leading-8 text-amber-800 dark:text-sky-500 font-Futurewave px-6 sm:px-8"
+        class="mt-6 text-sm sm:text-lg leading-8 text-blue-950 dark:text-sky-500 font-Futurewave px-6 sm:px-8"
       >
         Apologies for any inconvenience. Please be aware that you'll need to set
         up your own development environment. See pre-requirements as per below!
@@ -55,7 +55,7 @@ const props = Astro.props;
               <a
                 href="https://nodejs.org/en/download/"
                 target="_blank"
-                class="p-0 font-Futurewave font-bold text-amber-800 dark:text-amber-600"
+                class="p-0 font-Futurewave font-bold text-blue-950 dark:text-amber-600"
                 >Node & NPM installed (LTS version)</a
               >
             </li>
@@ -74,7 +74,7 @@ const props = Astro.props;
               <a
                 href="https://git-scm.com/downloads"
                 target="_blank"
-                class="p-0 font-Futurewave font-bold text-amber-800 dark:text-amber-600"
+                class="p-0 font-Futurewave font-bold text-blue-950 dark:text-amber-600"
                 >GIT installed</a
               >
             </li>
@@ -93,14 +93,14 @@ const props = Astro.props;
               <a
                 href="https://github.com/signup"
                 target="_blank"
-                class="p-0 font-Futurewave font-bold text-amber-800 dark:text-amber-600"
+                class="p-0 font-Futurewave font-bold text-blue-950 dark:text-amber-600"
                 >GitHub</a
               >
               <p>&</p>
               <a
                 href="https://app.hygraph.com/"
                 target="_blank"
-                class="p-0 font-Futurewave font-bold text-amber-800 dark:text-amber-600"
+                class="p-0 font-Futurewave font-bold text-blue-950 dark:text-amber-600"
                 >HyGraph</a
               >
             </li>
@@ -119,7 +119,7 @@ const props = Astro.props;
               <a
                 href="https://code.visualstudio.com/download"
                 target="_blank"
-                class="p-0 font-Futurewave font-bold text-amber-800 dark:text-amber-600"
+                class="p-0 font-Futurewave font-bold text-blue-950 dark:text-amber-600"
                 >VS Code (optional)</a
               >
             </li>
