--- a/src/components/TextCredits.astro
+++ b/src/components/TextCredits.astro
@@ -1,17 +1,16 @@
 ---
 import IntroSection from "./IntroSection.astro";
-const props = Astro.props;
 ---
 
 <IntroSection title="Credits | Attribution" id="credits">
   <Fragment slot="lead">
     <div class="max-w-7xl mx-auto my-10">
-      <h1 class="font-Futurewave text-2xl">Images</h1>
+      <h1 class="font-Futurewave text-2xl">Images & Icons</h1>
       <a
         title="Nintendo (derivative version by Lucian Novosel), Public domain, via Wikimedia Commons"
         href="https://commons.wikimedia.org/wiki/File:Novosel_mushroom.svg"
         target="_blank"
-        aria-label="A Masscom Media Project"
+        aria-label="Nintendo (derivative version by Lucian Novosel), Public domain, via Wikimedia Commons"
         >Nintendo (derivative version by Lucian Novosel), Public domain, via
         Wikimedia Commons</a
       >
@@ -20,21 +19,28 @@ const props = Astro.props;
         href="https://www.vecteezy.com/free-photos/oriental"
         target="_blank"
         title="Oriental Stock photos by Vecteezy"
-        aria-label="A Masscom Media Project"
+        aria-label="Oriental Stock photos by Vecteezy"
         >Oriental Stock photos by Vecteezy</a
       >
       <a
         href="https://pixabay.com/illustrations/sunset-anime-minimal-nature-sky-7628294/"
         title="Pixabay | Sunset"
         target="_blank"
-        aria-label="A Masscom Media Project">Pixabay | Sunset</a
+        aria-label="Pixabay | Sunset">Pixabay | Sunset</a
       >
       <a
         href="https://unsplash.com/"
         target="_blank"
         title="Unsplash | The internet’s source for visuals."
-        aria-label="A Masscom Media Project"
+        aria-label="Unsplash | The internet’s source for visuals."
         >Unsplash | The internet’s source for visuals.</a
+      >
+      <a
+        href="https://iconify.design/"
+        target="_blank"
+        title="Iconify | Freedom to choose icons"
+        aria-label="Iconify | Freedom to choose icons"
+        >Iconify | Freedom to choose icons</a
       >
     </div>
     <div class="max-w-7xl mx-auto my-10">
@@ -43,7 +49,7 @@ const props = Astro.props;
         title="Astro.build | The web framework for content-driven websites."
         href="https://astro.build/"
         target="_blank"
-        aria-label="A Masscom Media Project"
+        aria-label="Astro.build - The web framework for content-driven websites"
         >Astro.build - The web framework for content-driven websites</a
       >
 
@@ -51,7 +57,7 @@ const props = Astro.props;
         title="HyGraph | The headless CMS powering mission-critical applications."
         href="https://hygraph.com/"
         target="_blank"
-        aria-label="A Masscom Media Project"
+        aria-label="HyGraph - The headless CMS powering mission-critical applications."
         >HyGraph - The headless CMS powering mission-critical applications.</a
       >
       <a
@@ -78,7 +84,7 @@ const props = Astro.props;
         title="Tailwind Labs | Tailwind CSS Typography"
         href="https://github.com/tailwindlabs/tailwindcss-typography"
         target="_blank"
-        aria-label="Read and learn more about Tailwind CSS"
+        aria-label="Read and learn more about Tailwind Typography"
         >Tailwind Labs | Tailwind CSS Typography</a
       >
       <a
