--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -17,7 +17,7 @@ const {
 >
   <MainHead {title} {description} />
   <body
-    class="bg-gray-50 antialiased transition-colors duration-500 dark:bg-gray-700 text-gray-600 dark:text-gray-50"
+    class="bg-gray-50 antialiased transition-colors duration-500 dark:bg-gray-700 text-blue-950 dark:text-gray-50"
   >
   <Navigation />
   <main>
