--- a/src/styles/prose.css
+++ b/src/styles/prose.css
@@ -1,11 +1,11 @@
 .prose {
   @apply mx-auto w-full max-w-5xl px-6 overflow-hidden;
-  @apply text-gray-900 dark:text-gray-100;
+  @apply dark:text-gray-100;
   line-height: 1.75em;
 }
 
 .prose > p {
-  @apply my-4 font-normal;
+  @apply my-4 font-normal text-justify;
 }
 
 .prose > hr {
@@ -13,7 +13,7 @@
 }
 
 .prose > h1 {
-  @apply mb-4 mt-10 text-3xl font-normal leading-[38px];
+  @apply mb-4 mt-10 text-xl font-bold leading-[38px];
 }
 
 .prose > h2 {
@@ -29,7 +29,8 @@
 }
 
 .prose > img {
-  @apply my-16 mx-auto object-center aspect-auto h-auto w-full;
+  @apply my-16 mx-auto rounded-xl;
+  @apply object-center aspect-auto h-auto w-full;
 }
 
 .prose strong {
@@ -63,14 +64,14 @@
 }
 
 .prose :where(a) {
-  @apply text-sky-600 hover:text-gray-200 no-underline;
+  @apply text-blue-600 hover:text-gray-200 no-underline;
 }
 
 .prose > p code {
-  @apply text-left mx-0.5 inline-block rounded-lg bg-gray-900 px-2 align-baseline leading-6 text-gray-100 text-sm;
+  @apply text-left mx-0.5 inline-block rounded-lg bg-gray-100 px-2 align-baseline leading-6 text-green-500 text-sm;
 }
 
 .prose > pre {
   @apply my-6 text-left rounded-md;
-  @apply bg-gray-900 border border-gray-900 py-3 text-base text-amber-400;
+  @apply bg-gray-100 border border-gray-900 py-3 text-base text-amber-400;
 }
