--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -31,7 +31,7 @@ interface Props {
 
 export async function getStaticPaths() {
   const response = await fetch(
-    "https://api-ap-northeast-1.hygraph.com/v2/clt4ffy57008c08jpaguxht8t/master",
+    `${import.meta.env.HYGRAPH_ENDPOINT}`,
     {
       method: "POST",
       headers: {
