--- a/src/pages/portfolio/[...slug].astro
+++ b/src/pages/portfolio/[...slug].astro
@@ -25,17 +25,15 @@ interface Props {
 
 export const prerender = true;
 export async function getStaticPaths() {
-  const response = await fetch(
-    "https://api-ap-northeast-1.hygraph.com/v2/clt4ffy57008c08jpaguxht8t/master",
-    {
-      method: "POST",
-      headers: {
-        "Content-Type": "application/json",
-        Accept: "application/json/",
-        //Authorization: `Bearer ${import.meta.env.HYGRAPH_TOKEN}`,
-      },
-      body: JSON.stringify({
-        query: `
+  const response = await fetch(`${import.meta.env.HYGRAPH_ENDPOINT}`, {
+    method: "POST",
+    headers: {
+      "Content-Type": "application/json",
+      Accept: "application/json/",
+      //Authorization: `Bearer ${import.meta.env.HYGRAPH_TOKEN}`,
+    },
+    body: JSON.stringify({
+      query: `
         {
           projects {
             name
@@ -53,11 +51,9 @@ export async function getStaticPaths() {
           }
         }
       `,
-      }),
-    }
-  );
+    }),
+  });
   const projects = await response.json();
-  //console.log(projects);
   const paths = projects.data.projects.map((project) => ({
     params: {
       slug: project.slug,
@@ -73,6 +69,18 @@ const project = Astro.props.project;
 
 <ProjectLayout title={project.name}>
   <TextArticle />
+  <div
+    class="prose dark:prose-invert prose-h1:font-bold prose-h1:text-xl prose-a:text-blue-600 prose-p:text-justify prose-p:text-yellow-300 prose-img:rounded-xl prose-headings:underline prose-headings:font-Futurewave"
+  >
+    <h2>This is how data is fetched</h2>
+  </div>
+  <div class="overflow-hidden">
+    {project.name}
+    {project.description}
+    {project.sourceCode}
+    {project.content.html}
+  </div>
+
   <section class="my-24 max-w-7xl mx-auto">
     <div class="flex text-xs md:text-xl font-Futurewave">
       <a href="/">home</a>
@@ -83,7 +91,7 @@ const project = Astro.props.project;
       <a class="font-Futurewave btn" href="/portfolio">go back</a>
       <a class="font-Futurewave btn" href="/blog">go to blog</a>
     </div>
-    {project.content.html}
+
     <div
       class="prose dark:prose-invert prose-headings:underline prose-headings:font-Futurewave prose-inline-code:rounded prose-inline-code:border"
     >
