--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,7 +8,7 @@
 }
 
 body {
-  font-family: "Inter Variable", sans-serif;
+  /* font-family: "Inter Variable", sans-serif; */
   font-weight: 600;
 }
 a,
