ENV: pages adjusted

--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,6 +1,6 @@
 ---
 import MainLayout from "../layouts/MainLayout.astro";
-import Text404 from "../components/text404.astro";
+import Text404 from "../components/Text404.astro";
 const {
   title = "404 | Workshop - Create a Blog/Portfolio in Astro & HyGraph",
   description = "404 Page | Workshop - Create a Blog/Portfolio in Astro & HyGraph",
