--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,15 @@
 ---
 import { Icon } from "astro-icon/components";
+
+//Social Links
+const MeetUp = "https://www.meetup.com/ja-JP/osaka-web-designers-and-developers-meetup/";
+const Discord = "https://discord.com/invite/k8xj8d75f6";
+const LinkedIn = "https://www.linkedin.com/company/owddm-kwddm/";
+
+
 const today = new Date();
+const Year = today.getFullYear();
+
 
 const props = Astro.props;
 ---
@@ -38,7 +47,7 @@ const props = Astro.props;
     <div class="flex flex-col items-center sm:flex-row sm:justify-between">
       <p class="text-xs sm:text-sm text-center justify-center">
         © Copyright <span class="font-Inter tracking-widest text-xl"
-          >{today.getFullYear()}</span
+          >{Year}</span
         ><br /><a
           href="/credits"
           class="text-gray-800"
@@ -70,7 +79,7 @@ const props = Astro.props;
 
         <div class="flex mt-3 -mx-2 sm:mt-0">
           <a
-            href="https://www.meetup.com/ja-JP/osaka-web-designers-and-developers-meetup/"
+            href={MeetUp}
             target="_blank"
             class="mx-4 text-sm transition-colors duration-300 text-gray-800"
             aria-label="MeetUp"
@@ -90,7 +99,7 @@ const props = Astro.props;
           </a>
 
           <a
-            href="https://discord.com/invite/k8xj8d75f6"
+            href={Discord}
             target="_blank"
             class="mx-4 text-sm transition-colors duration-300 text-gray-800"
             aria-label="Discord"
@@ -110,7 +119,7 @@ const props = Astro.props;
           </a>
 
           <a
-            href="https://www.linkedin.com/company/owddm-kwddm/"
+            href={LinkedIn}
             target="_blank"
             class="mx-4 text-sm transition-colors duration-300 text-gray-800"
             aria-label="LinkedIn"
