--- a/src/components/LandingPagePortfolio.astro
+++ b/src/components/LandingPagePortfolio.astro
@@ -4,7 +4,7 @@
 import { Icon } from "astro-icon/components";
 
 const response = await fetch(
-  "https://api-ap-northeast-1.hygraph.com/v2/clt4ffy57008c08jpaguxht8t/master",
+  `${import.meta.env.HYGRAPH_ENDPOINT}`,
   {
     method: "POST",
     headers: {
