--- a/src/pages/me-myself-and-i.astro
+++ b/src/pages/me-myself-and-i.astro
@@ -4,7 +4,7 @@ import IntroSection from "../components/IntroSection.astro";
 import { slide } from "astro:transitions";
 
 const response = await fetch(
-  "https://api-ap-northeast-1.hygraph.com/v2/clt4ffy57008c08jpaguxht8t/master",
+  `${import.meta.env.HYGRAPH_ENDPOINT}`,
   {
     method: "POST",
     headers: {
@@ -19,6 +19,7 @@ const response = await fetch(
             slug
             picture {
               url
+              width
             }
             bio {
               html
@@ -26,6 +27,7 @@ const response = await fetch(
             intro
             post {
               slug
+              title
             }
           }
         }
@@ -114,6 +116,20 @@ const sizes = "(min-width: 1024px) 33vw, (min-width: 768px) 50vw, 100vw";
               </div>
             </div>
           </div>
+          <ul>
+            {authors.data.authors.map((author) => (
+              <>
+                <li>
+                  <a
+                    href={`/blog/${author.post[0].slug}`}
+                    class="relative z-10 rounded-full bg-gray-50 px-3 py-1.5 font-medium text-gray-600 hover:bg-gray-100"
+                  >
+                    {author.post[0].title}
+                  </a>
+                </li>
+              </>
+            ))}
+          </ul>
           <IntroSection title="Who Am I" id="about">
             <Fragment slot="lead">
               <div class="inline-block mx-auto">
@@ -134,7 +150,6 @@ const sizes = "(min-width: 1024px) 33vw, (min-width: 768px) 50vw, 100vw";
                 class="max-w-7xl prose prose-headings:text-sky-500 prose-headings:underline prose-headings:font-Futurewave"
                 set:html={author.bio.html}
               />
-              {author.post.slug}
             </Fragment>
           </IntroSection>
         </>
