RE:Create 404 | Edit: Post in Profile

--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,6 +1,7 @@
 ---
 import MainLayout from "../layouts/MainLayout.astro";
-import Text404 from "../components/Text404.astro";
+import TextError404 from "../components/TextError404.astro";
+//import Text404 from "../components/Text404.astro";
 const {
   title = "404 | Workshop - Create a Blog/Portfolio in Astro & HyGraph",
   description = "404 Page | Workshop - Create a Blog/Portfolio in Astro & HyGraph",
@@ -9,7 +10,7 @@ const {
 
 <MainLayout {title} {description}>
   <section>
-    <Text404 />
+    <TextError404 />
   </section>
 </MainLayout>
 
