Project: Font | Styling changes

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -13,9 +13,8 @@ const sizes = "(min-width: 1024px) 33vw, (min-width: 768px) 50vw, 100vw";
     alt="A magnificent Asian golden dragon encircled by crimson-gold blossoms."
     loading="eager"
     class="absolute object-cover h-screen aspect-auto"
-    width={1920}
-    height={1076}
     sizes={sizes}
+    quality={"low"}
   />
 
   <div
@@ -34,6 +33,7 @@ const sizes = "(min-width: 1024px) 33vw, (min-width: 768px) 50vw, 100vw";
                   class="rounded-full w-60 h-60 object-center mx-auto aspect-auto"
                   width={1020}
                   height={1020}
+                  quality={"low"}
                 />
               </div>
             </div>
@@ -61,7 +61,8 @@ const sizes = "(min-width: 1024px) 33vw, (min-width: 768px) 50vw, 100vw";
             <p
               class="mt-6 max-w-xl mx-auto leading-7 text-gradient-hero font-Futurewave text-xs sm:text-base"
             >
-              Learn how to create this blog & portfolio and gain insights into the entire process from inception to deployment !
+              Learn how to create this blog & portfolio and gain insights into
+              the entire process from inception to deployment !
             </p>
           </div>
         </div>
