--- a/src/components/TextCredits.astro
+++ b/src/components/TextCredits.astro
@@ -69,7 +69,6 @@ import IntroSection from "./IntroSection.astro";
         HTML</a
       >
     </div>
-
     <div class="max-w-7xl mx-auto my-10">
       <h1 class="font-Futurewave text-2xl">Plugins Used</h1>
       <a
@@ -99,7 +98,18 @@ import IntroSection from "./IntroSection.astro";
         href="https://fontsource.org/"
         target="_blank"
         aria-label="Read and learn more about Fontsource NPM"
-        >Fontsource | Self-host Open Source fonts in neatly bundled NPM packages.</a
+        >Fontsource | Self-host Open Source fonts in neatly bundled NPM
+        packages.</a
+      >
+    </div>
+    <div class="max-w-7xl mx-auto my-10">
+      <h1 class="font-Futurewave text-2xl">Fonts</h1>
+      <a
+        title="snapedsgn"
+        href="https://www.creativefabrica.com/designer/snapedsgn/"
+        target="_blank"
+        aria-label="Futurewave font by snapedsgn"
+        >snapedsgn | Futurewave font</a
       >
     </div>
     <div class="max-w-7xl mx-auto my-10">
@@ -108,8 +118,7 @@ import IntroSection from "./IntroSection.astro";
         title="Cybozu | ほんとに、ありがとうございました。For having us using their meeting-room facilities"
         href="https://cybozu.co.jp/"
         target="_blank"
-        aria-label="Read and learn more about Cybozu"
-        >Cybozu</a
+        aria-label="Read and learn more about Cybozu">Cybozu</a
       >
 
       <a
