--- a/src/components/TextError404.astro
+++ b/src/components/TextError404.astro
@@ -8,12 +8,12 @@ const { title = "Error Page" } = Astro.props;
 <IntroSection title={title} id="404">
   <Fragment slot="lead">
     <div class="font-Futurewave">
-      yeah baby <span class="text-3xl tracking-widest font-Inter text-amber-600"
+      yeah baby <span class="text-3xl tracking-widest font-Zen text-amber-600"
         >|</span
       > You just hit an {title}:<br />known as:<br />
     </div>
     <div
-      class="text-7xl sm:text-9xl tracking-widest font-Inter border-4 border-red-800 my-12 p-10 text-center"
+      class="text-7xl sm:text-9xl tracking-widest font-Zen border-4 border-red-800 my-12 p-10 text-center"
     >
       404
     </div>
@@ -56,7 +56,7 @@ const { title = "Error Page" } = Astro.props;
     <p class="text-center text-xs font-Futurewave">
       <br />
       Either delete this component and make your own <span
-        class="font-Inter text-xl tracking-widest"
+        class="font-Zen text-xl tracking-widest"
       >
         404
       </span>page!
