--- a/src/components/text404.astro
+++ b/src/components/text404.astro
@@ -7,8 +7,8 @@ const { title = "Error Page" } = Astro.props;
 
 <IntroSection title={title} id="404">
   <Fragment slot="lead">
-    <div class="font-Futurewave">yeah baby <span class="text-3xl tracking-widest font-Inter text-amber-600">|</span> You just hit an {title}:<br />known as:<br /></div>
-    <div class="text-7xl sm:text-9xl tracking-widest font-Inter border-4 border-red-800 my-12 p-10 text-center">404</div>
+    <div class="font-Futurewave">yeah baby <span class="text-3xl tracking-widest font-Zen text-amber-600">|</span> You just hit an {title}:<br />known as:<br /></div>
+    <div class="text-7xl sm:text-9xl tracking-widest font-Zen border-4 border-red-800 my-12 p-10 text-center">404</div>
     <div
       class="flex justify-center space-x-1 sm:space-x-5 my-8 lg:my-16 font-Futurewave"
     >
@@ -44,7 +44,7 @@ const { title = "Error Page" } = Astro.props;
     </p>
     <p class="text-center text-xs font-Futurewave">
       <br />
-      Either delete this component and make your own <span class="font-Inter text-xl tracking-widest"> 404 </span>page!
+      Either delete this component and make your own <span class="font-Zen text-xl tracking-widest"> 404 </span>page!
       <br />
       <span class="leading-9 text-xs"
         >or keep it and try to make something of your own!</span
