--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,8 +8,9 @@
 }
 
 body {
-  /* font-family: "Inter Variable", sans-serif; */
+  font-family: 'Zen Kaku Gothic New', sans-serif;
   font-weight: 600;
+  @apply tracking-widest;
 }
 a,
 .btn {
