--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -46,7 +46,7 @@ const props = Astro.props;
 
     <div class="flex flex-col items-center sm:flex-row sm:justify-between">
       <p class="text-xs sm:text-sm text-center justify-center">
-        © Copyright <span class="font-Inter tracking-widest text-xl"
+        © Copyright <span class="font-Zen tracking-widest text-xl"
           >{Year}</span
         ><br /><a
           href="/credits"
