--- a/src/components/MainHead.astro
+++ b/src/components/MainHead.astro
@@ -3,6 +3,7 @@
 import "../styles/index.css";
 // Supports weights 100-900
 import "@fontsource-variable/inter";
+import '@fontsource/zen-kaku-gothic-new';
 
 import { ViewTransitions } from "astro:transitions";
 
@@ -19,7 +20,7 @@ const { title, description } = Astro.props;
   <title>{title}</title>
   <meta name="description" content={description} />
   <!-- bfcache -->
-  <!-- Pages that use WebAuthetication API are not eligible for back/forward cache 
+  <!-- Pages that use WebAuthentication API are not eligible for back/forward cache 
   <meta http-equiv="Pragma" content="no-cache" />
   <meta http-equiv="Cache-Control" content="no-cache" />
   <meta http-equiv="Expires" content="0" /> -->
@@ -52,8 +53,8 @@ const { title, description } = Astro.props;
     setMode();
     document.addEventListener("astro:after-swap", setMode);
   </script>
-  <!--   -->
+  <!-- 
   <script defer src="https://eu.umami.is/script.js" data-website-id="a365d69a-db96-4c37-817e-6982c2d09147"></script>
-
+  -->
   <ViewTransitions />
 </head>
