--- a/src/components/Notice.astro
+++ b/src/components/Notice.astro
@@ -36,29 +36,29 @@ const props = Astro.props;
             </h3>
             <div class="h-px flex-auto bg-sky-600"></div>
           </div>
+          <div class="flex mt-8 space-x-3 leading-6">
+            <svg
+              class="h-6 w-5 flex-none text-sky-600"
+              viewBox="0 0 20 20"
+              fill="currentColor"
+              aria-hidden="true"
+            >
+              <path
+                fill-rule="evenodd"
+                d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
+                clip-rule="evenodd"></path>
+            </svg>
+            <a
+              href="https://nodejs.org/en/download/"
+              target="_blank"
+              class="p-0 font-Futurewave font-bold text-blue-950 dark:text-amber-600"
+              >Node & NPM installed (LTS version)</a
+            >
+          </div>
           <ul
             role="list"
-            class="mt-8 grid grid-cols-1 gap-4 text-sm leading-6 sm:grid-cols-2 sm:gap-6"
+            class="mt-6 grid grid-cols-1 gap-4 text-sm leading-6 sm:grid-cols-2 sm:gap-6"
           >
-            <li class="flex gap-x-3">
-              <svg
-                class="h-6 w-5 flex-none text-sky-600"
-                viewBox="0 0 20 20"
-                fill="currentColor"
-                aria-hidden="true"
-              >
-                <path
-                  fill-rule="evenodd"
-                  d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
-                  clip-rule="evenodd"></path>
-              </svg>
-              <a
-                href="https://nodejs.org/en/download/"
-                target="_blank"
-                class="p-0 font-Futurewave font-bold text-blue-950 dark:text-amber-600"
-                >Node & NPM installed (LTS version)</a
-              >
-            </li>
             <li class="flex gap-x-3">
               <svg
                 class="h-6 w-5 flex-none text-sky-600"
@@ -94,14 +94,26 @@ const props = Astro.props;
                 href="https://github.com/signup"
                 target="_blank"
                 class="p-0 font-Futurewave font-bold text-blue-950 dark:text-amber-600"
-                >GitHub</a
+                >GitHub account</a
               >
-              <p>&</p>
+            </li>
+            <li class="flex gap-x-3">
+              <svg
+                class="h-6 w-5 flex-none text-sky-600"
+                viewBox="0 0 20 20"
+                fill="currentColor"
+                aria-hidden="true"
+              >
+                <path
+                  fill-rule="evenodd"
+                  d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
+                  clip-rule="evenodd"></path>
+              </svg>
               <a
                 href="https://app.hygraph.com/"
                 target="_blank"
                 class="p-0 font-Futurewave font-bold text-blue-950 dark:text-amber-600"
-                >HyGraph</a
+                >HyGraph account</a
               >
             </li>
             <li class="flex gap-x-3">
