--- a/src/styles/prose.css
+++ b/src/styles/prose.css
@@ -5,7 +5,8 @@
 }
 
 .prose > p {
-  @apply my-4 font-normal text-justify;
+  @apply my-4 font-semibold text-justify;
+  @apply tracking-widest;
 }
 
 .prose > hr {
@@ -44,7 +45,7 @@
 /* the ::marker selector doesn't allow customizing the spacing around the marker as easily */
 .prose ul li::before {
   content: "";
-  /* background: url("../icons/game-icons-heart.svg") center no-repeat; */
+  background: url("../icons/mushroom.svg") center no-repeat;
   display: inline-block;
   width: 10px;
   height: 10px;
